@@ -5,6 +5,7 @@ V0.0.8 (2017-0x-xx):
   * Base64StringModelElement for parsing of base64 strings
   * AnalysisChild full asynchronous remote control connection
     handling
+  * MissingMatchPathValueDetector realerting support added
 * Changes:
   * Various bugfixes
   * Code cleanup using pylint
